# week3-ml-baseline-system

./: README.md  pyproject.toml
Week3_Titanic/: titanic.ipynb
data/processed/: features.csv
src/: make_sample_data.py
src/ml_baseline/: cli.py
